# Crimson

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
editor/: CMakeLists.txt
editor/assets/shaders/: triangle.frag.glsl  triangle.vert.glsl
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/include/crimson/core/: application.hpp  command_buffer.hpp  core.hpp  events.hpp  log.hpp  window.hpp
engine/include/crimson/platform/windows/: windows_window.hpp
engine/include/crimson/renderer/: buffer_layout.hpp  buffers.hpp  core.hpp  frame.hpp  frame_context.hpp  graphics_pipeline_cache.hpp  handle_registry.hpp  render_command_queue.hpp  render_commands.hpp  render_core.hpp  render_surface.hpp  renderer.hpp  renderer_api.hpp  renderer_backend.hpp  rendering_context.hpp  resource_handles.hpp  resource_manager.hpp  resource_manager_base.hpp
engine/include/crimson/renderer/buffers/: index_buffer.hpp  vertex_buffer.hpp
engine/src/: Window.cpp
engine/src/core/: application.cpp  log.cpp
engine/src/platform/glfw/: glfw_window.cpp  glfw_window.hpp
engine/src/platform/opengl/: opengl_backend.cpp  opengl_backend.hpp  opengl_backend_glfw.cpp  opengl_context.hpp  opengl_context_glfw.cpp  opengl_index_buffer.cpp  opengl_index_buffer.hpp  opengl_renderer.hpp  opengl_renderer_glfw.cpp  opengl_resource_manager.cpp  opengl_resource_manager.hpp  opengl_resources.hpp  opengl_vertex_buffer.cpp  opengl_vertex_buffer.hpp  utils.hpp  vertex_array_cache.hpp
engine/src/platform/vulkan/: vulkan_device.cpp  vulkan_device.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_resource_manager.cpp  vulkan_resource_manager.hpp  vulkan_resources.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
engine/src/platform/windows/: windows_window.cpp
engine/src/renderer/: renderer.cpp  renderer_backend.cpp  rendering_context.cpp
engine/src/renderer/buffers/: index_buffer.cpp  vertex_buffer.cpp
